policies/supply-chain/verify-provenance-admit_test/attested-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: provenanced
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/zulu:v0.0.14
